# onyx-extension

./: .env.example  .gitignore  .prettierignore  404.html  README.md  RELEASE.md  index.html  install.json  mkdocs.yml  package.json  pyproject.toml  sitemap.xml
.github/workflows/: build.yml  check-release.yml  docs.yml  lint.yml  publish.yml
climb_onyx_gui/: __init__.py  decorators.py  exceptions.py  handlers.py  validators.py
climb_onyx_ui/: __init__.py  handlers.py
docs/: index.md  installation.md
docs/gui/: getting-started.md  graphing-data.md  launching_interface.md  profiles-and-sites.md
docs/gui/documentation/: contents.md  index.md  inspecting-data.md  launching-the-interface.md  profiles-and-sites.md  querying-data.md  quick-start.md
docs/stylesheets/: extra.css
gui/documentation/graphing-data/: index.html
gui/documentation/inspecting-data/: index.html
gui/documentation/profiles-and-sites/: index.html
gui/documentation/querying-data/: index.html
gui/documentation/quick-start/: index.html
installation/: index.html
jupyter-config/server-config/: climb_onyx_gui.json  climb_onyx_ui.json  onyx_extension.json
onyx_extension/: __init__.py  handlers.py
search/: search_index.json
src/: App.tsx  agateWidget.tsx  climb_agate_gui.tsx  handler.ts  icon.ts  index.ts  onyxWidget.tsx  openS3FileWidget.ts  typings.d.ts
style/: base.css  index.css
